Added FPS display

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -138,3 +138,12 @@ app {
   right: 0.75rem;
   top: 0.5rem;
 }
+
+#fps {
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+}
